happy-soup/unpackaged/unpackaged/objects/PageText__c.object
<CustomObject>
    <fields>
        <fullName>PageName__c</fullName>
        <label>Page Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSection__c</fullName>
        <label>Page Section</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>The text that goes in the specified section</description>
        <inlineHelpText>The text that goes in the specified section</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Page Text</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>